--- a/assignment/resources/css/stylesheet.css
+++ b/assignment/resources/css/stylesheet.css
@@ -8,7 +8,20 @@
     box-sizing: border-box;
 }
 
-header{
+.header{
     background-color: navy;
     color: white;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#console-section{
+    background-color: lightgray;
+    padding: 1em;
+}
+
+body{
+    background-image: url('../css/record.png');
+    background-repeat:repeat;
+    margin:0;
 }
